test/files/neg/virtpatmat_reach_null.check
virtpatmat_reach_null.scala:15: warning: unreachable code
      case _                              =>  // unreachable
                                          ^
error: No warnings can be incurred under -Werror.
one warning found
one error found
